--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,8 @@
 .place__url-heading{
+  grid-area: url;
   margin: 0;
-  padding: 0;
+  padding: 0 0 35px 0;
+  align-self: end;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -8,4 +10,10 @@
   letter-spacing: .2em;
   text-transform: uppercase;
   color: #aaa;
+}
+
+@media screen and (max-width: 460px) {
+  .place__url-heading {
+    display: none;
+  }
 }
